# snif

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Makefile.am  Makefile.in  NOTICE  README  README.md  SECURITY.md  config.h.in  configure  configure.ac  security-model.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  codeql.yml
ca-proxy/: Makefile.am  Makefile.in  README  configure  configure.ac  mkdirs
ca-proxy/etc/: snif.snif.xyz.domains  snif.xyz.tsig
ca-proxy/etc/systemd/: snif-apnsd.service  snif-certd.service  snif-relay.service
ca-proxy/inc/: snif-auth-captcha.php  snif-auth-ves.php
ca-proxy/public_html/: index.php  snif-cert.php
ca-proxy/public_html/.well-known/acme-challenge/: ABOUT
ca-proxy/public_html/snif-cert/: .htaccess
ca-proxy/secure_html/: .htaccess  snif-auth.php  snif-cert.php
doc/: README.md  draft-zubov-snif-04.txt  security-model.md
etc/: snif.conf
etc/systemd/: snif-apnsd.service  snif-certd.service  snif-conn.service  snifd.service
lib/: Makefile.am  Makefile.in  cert.c  cert.h  conn.c  conn.h  snif.h
snifd/: abuse.c  abuse.h  buf.c  buf.h  cln.c  cln.h  ctl.c  ctl.h  fifo.c  fifo.h  fwd.c  fwd.h  help.c  help.h  host.c  host.h  jTree.c  jTree.h  listen.c  listen.h  port.c  port.h  snifd.c  sock.c  sock.h  srv.c  srv.h  util.c  util.h  watch.c  watch.h
