#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_PREREQ([2.69])
AC_INIT([snif-ca-proxy], [0.93], [bugs@vesvault.com])

AC_CONFIG_AUX_DIR([../build-aux])

AM_INIT_AUTOMAKE([1.0 subdir-objects foreign])

AC_PREFIX_DEFAULT(/usr)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

